# ccsearch

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  SECURITY.md  ccfind  install.sh  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release.yml
src/ccfind/: __init__.py  __main__.py  cli.py
src/ccsearch/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
